--- a/server/Makefile
+++ b/server/Makefile
@@ -8,6 +8,11 @@ OUTPUT_DIR=build
 BINARY_NAME=kwmassetsliabilities
 TARGET=$(OUTPUT_DIR)/$(BINARY_NAME)
 
+ifneq ("$(wildcard ./.env)","")
+	include ./.env
+	export $(shell sed 's/=.*//' ./.env)
+endif
+
 all: build test
 .PHONY: build
 build:
@@ -22,3 +27,17 @@ run:
 	./$(TARGET) server start
 deps:
 	$(GOGET)
+
+build-migrations:
+	go build -o ./migrations/goose ./cmd/goose/*.go 
+	chmod +x ./migrations/goose
+
+db-new-migration:
+	goose -dir migrations/ create ${name}
+
+db-migrate: build-migrations
+	./migrations/goose -dir migrations postgres "host=${AL_DB_HOST} port=${AL_DB_PORT} user=${AL_DB_USER}  password=${AL_DB_PASSWORD} dbname=${AL_DB_NAME} sslmode=${AL_DB_SSL_MODE}" up
+
+db-rollback: build-migrations
+	./migrations/goose -dir migrations postgres "host=${AL_DB_HOST} port=${AL_DB_PORT} user=${AL_DB_USER}  password=${AL_DB_PASSWORD} dbname=${AL_DB_NAME} sslmode=${AL_DB_SSL_MODE}" down
+
